<resources>
    <string name="app_name">BluBot</string>

    <!-- Bluetooth Not available -->
    <string name="title_activity_bluetooth_na">Bluetooth Not Available</string>

    <string name="bluetooth_not_available">Bluetooth Not Available</string>
    <string name="bluetooth_na_description">BluBot can not find Bluetooth on this device. Either this device doesn\'t have Bluetooth hardware or BluBot has some bug. If your device has Bluetooth and BluBot is not detecting it, please create an issue on GitHub or email the developer.</string>
    <string name="GitHub">GitHub</string>
    <string name="email_developer">Email Developer</string>
    <string name="github_issues_url" translatable="false">https://github.com/rionlabs/BluBot/issues</string>
    <string name="developer_email" translatable="false">mail@rionlabs.org</string>
    <string name="email_subject">Bug in BluBot</string>

    <string name="bluetooth_disabled">Bluetooth Disabled</string>
    <string name="bt_disabled_description">Bluetooth is disabled. Click button to turn it on.</string>
    <string name="turn_bluetooth_on">Turn Bluetooth On</string>

    <string name="cd_bluetooth_device">Bluetooth Device</string>
    <string name="cd_paired_device">Device Paired</string>
    <string name="send_email_intent_title">Send Email</string>
    <string name="action_about">About BluBot</string>
    <string name="action_refresh">Refresh Device List</string>
    <string name="action_settings">Settings</string>

    <!-- Location Permission -->
    <string name="request_location_title">Needs Location Permission</string>
    <string name="request_location_message">To discover nearby devices, BluBot needs Location permission. Without the permission, BluBot won\'t be able to find nearby devices.</string>
    <string name="open_settings">Open Settings</string>
    <string name="grant_permission">Grant Permission</string>
    <string name="package_uri">package:%1$s</string>

    <!-- Control Sheet -->
    <string name="minimize_controls">Minimize Controls</string>
    <string name="close_connection">Close Connection</string>
    <string name="connecting_to">Connecting to %1$s</string>
    <string name="connected_to">Connected to %1$s</string>

    <string name="empty" translatable="false" />

    <string name="scan">Scan</string>
    <string name="stop">Stop</string>

    <string name="scanning_in_progress">Scanning for devices…</string>
    <string name="scanning_stopped">Available Devices</string>
</resources>