<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.BluetoothNAActivity">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:popupTheme="@style/AppTheme.PopupOverlay" />

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/space_normal"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            tools:context=".ui.BluetoothNAActivity"
            tools:showIn="@layout/activity_bluetooth_na">

            <ImageView
                android:id="@+id/blNaImage"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/space_normal"
                android:contentDescription="@string/bluetooth_not_available"
                android:src="@drawable/ic_bluetooth_disabled"
                app:layout_constraintBottom_toTopOf="@+id/blNaTitleText"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="packed" />

            <TextView
                android:id="@+id/blNaTitleText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/space_normal"
                android:text="@string/bluetooth_not_available"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@color/primaryTextColor"
                app:layout_constraintBottom_toTopOf="@+id/blNaDescriptionText"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/blNaImage" />

            <TextView
                android:id="@+id/blNaDescriptionText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/space_normal"
                android:gravity="center"
                android:text="@string/bluetooth_na_description"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/secondaryTextColor"
                app:layout_constraintBottom_toTopOf="@+id/blNaGithubIssueLink"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/blNaTitleText" />

            <TextView
                android:id="@+id/blNaGithubIssueLink"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/space_normal"
                android:text="@string/GitHub"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@color/linkTextColor"
                app:layout_constraintBottom_toTopOf="@+id/blNaDevEmailLink"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/blNaDescriptionText" />

            <TextView
                android:id="@+id/blNaDevEmailLink"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/space_normal"
                android:text="@string/email_developer"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@color/linkTextColor"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/blNaGithubIssueLink" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>