<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.ConnectionActivity">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/contentLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay">

            <androidx.appcompat.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:contentInsetEnd="0dp"
                app:contentInsetStart="0dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/space_large"
                        android:layout_marginTop="@dimen/space_normal"
                        android:layout_marginBottom="@dimen/space_normal"
                        android:layout_weight="1"
                        android:text="@string/app_name"
                        android:textColor="@color/primaryLightTextColor"
                        android:textSize="@dimen/text_header"
                        android:textStyle="bold" />

                    <ImageButton
                        android:id="@+id/settingsButton"
                        style="?borderlessButtonStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/action_settings"
                        android:src="@drawable/ic_action_settings"
                        android:tint="@color/iconsLight" />

                </LinearLayout>

            </androidx.appcompat.widget.Toolbar>

            <androidx.appcompat.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize"
                android:background="?attr/colorPrimary"
                app:contentInsetEnd="0dp"
                app:contentInsetStart="0dp"
                app:popupTheme="@style/AppTheme.PopupOverlay" />

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/fragmentContainer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior" />

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/scanButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="@string/scan"
            android:textColor="@color/iconsLight"
            app:icon="@drawable/ic_action_refresh"
            app:iconTint="@color/iconsLight"
            app:layout_anchor="@id/appBar"
            app:layout_anchorGravity="end|bottom" />

        <org.rionlabs.blubot.ui.view.ControlSheet
            android:id="@+id/controlSheet"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="bottom"
            android:elevation="@dimen/control_sheet_elevation"
            app:behavior_hideable="false"
            app:behavior_peekHeight="0dp"
            app:layout_anchorGravity="bottom" />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>